# crash-recorder

./: .gitignore  Cargo.toml  LICENSE
src/: app_data.rs  main.rs  record.rs
src/ui/: app.rs  builder.rs  mod.rs  style.rs  utils.rs  window.rs
